# SimScanning

./: CMakeLists.txt  LICENSE  ModelLoading.cpp  ModelLoading.h  Source.cpp  TexturedTriangleMesh.fragmentshader  TexturedTriangleMesh.vertexshader
output-models/: zebra.mtl
